--- a/exercicios/aula07/ex01/estilo/style.css
+++ b/exercicios/aula07/ex01/estilo/style.css
@@ -12,7 +12,7 @@ main{
     background-color: white;
     border-radius: 10px;
     padding: 10px;
-    width: 500px;
+    max-width: 500px;
     margin: auto;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.233);
 }
